# umi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OPENTELEMETRY_VERIFICATION.md  OTEL_VERIFICATION_SUMMARY.md  PYTHON.md  README.md  RELEASING.md  USER_TEST_REPORT.md  VISION.md  clippy.toml  pyproject.toml
.github/workflows/: ci-rust.yml  ci.yml  release.yml
.progress/: .gitkeep  001_20260111_163000_umi-standalone-roadmap.md  001_20260112_140000_phase1-embedding-foundation.md  002_20260111_210000_rust-full-port.md  002_20260112_150000_phase2-wire-embeddings.md  003_20260112_160000_phase3-dual-retrieval.md  003_20260112_benchmarking-testing-masterplan.md  004_20260112_180000_phase4-storage-backends.md  005_20260112_200000_phase5-api-polish.md  006_20260112_210000_phase6-testing-validation.md  007_20260112_140837_fault-injection-dst.md  007_20260113_phase7-performance-benchmarking.md  008_20260112_161500_production-readiness.md  008_20260113_phase8-documentation-examples.md  009_20260112_160500_user-testing-followup.md  010_20260112_163400_opentelemetry-integration.md  012_20260112_223000_kelpie-integration-features.md  013_20260113_002000_umi-memu-feature-parity.md  014_20260113_055000_dst-memory-integration.md  015_DST_FIRST_DEMO.md  016_DST_FIRST_COMPARISON.md  017_DST_FIRST_FINAL_SUMMARY.md  018_20260113_memu-parity-features.md  019_20260113_194200_python-bindings-completion.md  042_20260113_000000_make-providers-object-safe.md  043_20260115_000000_developer-experience-fixes.md  044_20260115_143000_simllm-entity-extraction-fix.md  045_20260115_150000_lance-l2-score-conversion-fix.md  046_20260115_153000_fix-remaining-ux-issues.md  047_20260115_170000_quality-improvements.md  048_20260115_200000_evolution-panic-fix.md  049_20260115_215000_comprehensive-quality-fixes.md  README.md  checklist.md  kelpie_mapping_explained.md  memory_philosophy_comparison.md  memory_tiers_comparison.md  memu_vs_umi_comparison.md  phase1_bugs_found.md  phase2_bugs_found.md  (+10 more)
.vision/: umi-vision.md
docs/: findings-summary.md  isotopes-rust-replication.md  kelpie-ecosystem-integration.md  kelpie-learnings.md  letta-rust-feasibility.md  migration_unified_memory.md  trajectories-continual-learning.md
docs/adr/: 009-dual-retrieval.md  010-entity-extraction.md  011-evolution-tracking.md  012-sim-llm.md  013-llm-provider-trait.md  014-entity-extractor.md  015-dual-retriever.md  016-evolution-tracker.md  017-memory-class.md  018-lance-storage-backend.md  019-dst-performance-testing.md  020-markdown-rendering.md
scripts/: run_e2e_tests.sh
umi/: __init__.py  evolution.py  extraction.py  faults.py  memory.py  retrieval.py  storage.py
umi-core/: Cargo.toml
umi-core/src/: constants.rs  lib.rs
umi-core/src/dst/: clock.rs  config.rs  llm.rs  mod.rs  property.rs  rng.rs  simulation.rs
umi-core/src/evolution/: mod.rs
umi-core/src/extraction/: mod.rs
umi-core/src/llm/: anthropic.rs  mod.rs  openai.rs  sim.rs
umi-core/src/memory/: block.rs  core.rs  mod.rs  working.rs
umi-core/src/retrieval/: mod.rs  types.rs
umi-core/src/storage/: backend.rs  error.rs  lance.rs  mod.rs  sim.rs  vector.rs
umi-core/src/umi/: mod.rs
umi-memory/: Cargo.toml  README.md
umi-memory/benches/: memory.rs  memory_tiers.rs  pipelines.rs  storage.rs  vector_backends.rs
umi-memory/examples/: aggressive_perf_dst.rs  basic_usage.rs  configuration.rs  full_e2e_test.rs  full_workflow_dst.rs  kelpie_agent_demo.rs  kelpie_integration_test.rs  opentelemetry_example.rs  production_setup.rs  test_anthropic.rs  test_openai.rs  unified_memory_basic.rs  user_experience.rs  user_experience_v2.rs  user_experience_v3.rs
umi-memory/src/: constants.rs  lib.rs
umi-memory/src/dst/: clock.rs  config.rs  fault.rs  llm.rs  mod.rs  network.rs  property.rs  rng.rs  simulation.rs  storage.rs
umi-memory/src/embedding/: mod.rs  openai.rs  sim.rs
umi-memory/src/evolution/: mod.rs  prompts.rs
umi-memory/src/extraction/: mod.rs  prompts.rs  types.rs
umi-memory/src/llm/: anthropic.rs  mod.rs  openai.rs  sim.rs
umi-memory/src/memory/: archival.rs  block.rs  core.rs  integration_tests.rs  kelpie_mapping.rs  mod.rs  working.rs
umi-memory/src/orchestration/: access_tracker.rs  category_evolution.rs  eviction.rs  mod.rs  promotion.rs  unified.rs
umi-memory/src/orchestration/tests/: integration.rs  mod.rs  performance.rs
umi-memory/src/retrieval/: mod.rs  prompts.rs  types.rs
umi-memory/src/storage/: backend.rs  entity.rs  error.rs  evolution.rs  lance.rs  lance_vector.rs  mod.rs  postgres.rs  postgres_vector.rs  sim.rs  vector.rs
umi-memory/src/telemetry/: mod.rs
umi-memory/src/umi/: builder.rs  config.rs  mod.rs
umi-memory/tests/: dst_discovery_entity_deduplication.rs  dst_discovery_recall_relevance.rs  dst_lance_vector.rs  dst_memory_builder.rs  dst_memory_config.rs  dst_postgres_vector.rs  integration_memory.rs  integration_real_embeddings.rs  test_quality_improvements.rs
umi-py/: Cargo.toml  README.md  pyproject.toml  test_bindings.py  umi.pyi
umi-py/examples/: 01_basic_sync_sim.py  02_options_demo.py  03_deterministic_demo.py  04_async_demo.py  README.md
umi-py/src/: lib.rs
umi-py/tests/: conftest.py  test_memory_async.py  test_memory_basic.py  test_real_providers.py
umi/providers/: __init__.py  anthropic.py  base.py  openai.py  sim.py
umi/tests/: __init__.py  test_evolution.py  test_extraction.py  test_memory.py  test_providers.py  test_retrieval.py
