[workspace]
resolver = "2"
members = [
    "umi-memory",
    "umi-py",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

repository = "https://github.com/rita-aga/umi"
authors = ["rita-aga"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Bytes for zero-copy buffers
bytes = "1"

# Deterministic RNG
rand = "0.8"
rand_chacha = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# LanceDB (embedded vector database) - use vectordb crate (older lancedb)
vectordb = { version = "0.4", default-features = false }
arrow-array = "50"
arrow-schema = "50"
futures = "0.3"

# Time - pin to 0.4.38 to avoid quarter() conflict with arrow-arith
chrono = { version = "=0.4.38", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Logging and Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (optional feature)
opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tokio", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.22" }

# HTTP client (for LLM providers)
reqwest = { version = "0.11", features = ["json"] }

# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
