[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umi"
version = "0.1.0"
description = "Memory system that never forgets - with provable correctness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "RikaiOS Team" },
]
keywords = ["memory", "llm", "ai", "simulation", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
all = ["anthropic>=0.18.0", "openai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/rita-aga/rikai-os"
Documentation = "https://github.com/rita-aga/rikai-os/tree/main/umi"
Repository = "https://github.com/rita-aga/rikai-os"
Issues = "https://github.com/rita-aga/rikai-os/issues"

[tool.hatch.build.targets.wheel]
packages = ["umi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["umi/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
