[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "umi-memory"
version = "0.1.0"
description = "Memory library for AI agents - Rust implementation with Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "RikaiOS Team" },
]
keywords = ["memory", "llm", "ai", "agents", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/rita-aga/umi"
Repository = "https://github.com/rita-aga/umi"
Issues = "https://github.com/rita-aga/umi/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "umi"
manifest-path = "umi-py/Cargo.toml"
