[package]
name = "umi-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for Umi memory system"

[lib]
name = "umi"
crate-type = ["cdylib"]

[dependencies]
# Enable ALL features for complete Python bindings
umi-memory = { path = "../umi-memory", features = [
    "anthropic",          # Anthropic LLM provider
    "openai",             # OpenAI LLM provider
    "embedding-openai",   # OpenAI embedding provider
    "lance",              # LanceDB storage + vector backend
    "postgres",           # Postgres storage + vector backend
] }
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
